--- a/mailu.env
+++ b/mailu.env
@@ -18,7 +18,7 @@ SUBNET=172.21.0.0/16
 DOMAIN=mhn.docker.localhost
 
 # Hostnames for this server, separated with comas
-HOSTNAMES=mhn.docker.localhost,mail.docker.localhost
+HOSTNAMES=mhn.docker.localhost,mailu.docker.localhost
 
 # Postmaster local part (will append the main mail domain)
 POSTMASTER=root
