--- a/mailu.env
+++ b/mailu.env
@@ -8,29 +8,17 @@
 # Common configuration variables
 ###################################
 
-# Set to a randomly generated 16 bytes string
-SECRET_KEY=NPSUaLr7Xs786Rxs
-
 # Subnet of the docker network. This should not conflict with any networks to which your system is connected. (Internal and external!)
 SUBNET=172.21.0.0/16
 
-# Main mail domain
-DOMAIN=mhn.docker.localhost
-
-# Hostnames for this server, separated with comas
-HOSTNAMES=mhn.docker.localhost,mailu.docker.localhost
-
 # Postmaster local part (will append the main mail domain)
 POSTMASTER=root
-
-# Choose how secure connections will behave (value: letsencrypt, cert, notls, mail, mail-letsencrypt)
-TLS_FLAVOR=notls
 
 # Authentication rate limit (per source IP address)
 AUTH_RATELIMIT=10/minute;1000/hour 
 
 # Opt-out of statistics, replace with "True" to opt out
-DISABLE_STATISTICS=False
+DISABLE_STATISTICS=True
 
 ###################################
 # Optional features
@@ -99,14 +87,6 @@ WEB_ADMIN=/admin
 # Path to the webmail if enabled
 WEB_WEBMAIL=
 
-# Website name
-SITENAME=MHN Mailu
-
-# Linked Website URL
-WEBSITE=https://mhn.e-nigma.xyz
-
-
-
 ###################################
 # Advanced settings
 ###################################
@@ -140,9 +120,3 @@ LOG_LEVEL=WARNING
 # Database settings
 ###################################
 DB_FLAVOR=sqlite
-
-
-# ADMIN
-INITIAL_ADMIN_ACCOUNT=admin
-INITIAL_ADMIN_DOMAIN=mhn.docker.localhost
-INITIAL_ADMIN_PW=admin
