--- a/config.env.sample
+++ b/config.env.sample
@@ -1,4 +1,4 @@
-DOMAINNAME=docker.localhost
+# edit and save as config.env
 
 # Set to a randomly generated 16 bytes string
 SECRET_KEY=NPSUaLr7Xs786Rxs
