--- a/config.env.sample
+++ b/config.env.sample
@@ -13,7 +13,7 @@ DOMAIN=docker.localhost
 HOSTNAMES=mhn.docker.localhost,mailu.docker.localhost
 
 # Choose how secure connections will behave (value: letsencrypt, cert, notls, mail, mail-letsencrypt)
-TLS_FLAVOR=notls
+TLS_FLAVOR=mail
 
 # Authentication rate limit (per source IP address)
 AUTH_RATELIMIT=10/minute;1000/hour 
