--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   # External dependencies
   redis:
     image: redis:alpine
-    restart: always
+    restart: unless-stopped
     volumes:
       - "${VOLUMES_DIR}/mailu/redis:/data"
     networks:
@@ -17,7 +17,7 @@ services:
   # Core services
   front:
     image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}nginx:${MAILU_VERSION:-1.7}
-    restart: always
+    restart: unless-stopped
     env_file:
       - mailu.env
       - config.env
@@ -48,7 +48,7 @@ services:
 
   admin:
     image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}admin:${MAILU_VERSION:-1.7}
-    restart: always
+    restart: unless-stopped
     env_file:
       - mailu.env
       - config.env
@@ -62,7 +62,7 @@ services:
 
   imap:
     image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}dovecot:${MAILU_VERSION:-1.7}
-    restart: always
+    restart: unless-stopped
     env_file:
       - mailu.env
       - config.env
@@ -76,7 +76,7 @@ services:
 
   smtp:
     image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}postfix:${MAILU_VERSION:-1.7}
-    restart: always
+    restart: unless-stopped
     env_file:
       - mailu.env
       - config.env
@@ -89,7 +89,7 @@ services:
 
   antispam:
     image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}rspamd:${MAILU_VERSION:-1.7}
-    restart: always
+    restart: unless-stopped
     env_file:
       - mailu.env
       - config.env
