--- a/mailu.env
+++ b/mailu.env
@@ -9,10 +9,10 @@
 ###################################
 
 # Subnet of the docker network. This should not conflict with any networks to which your system is connected. (Internal and external!)
-SUBNET=172.21.0.0/16
+SUBNET=172.19.0.0/16
 
 # Postmaster local part (will append the main mail domain)
-POSTMASTER=root
+POSTMASTER=admin
 
 # Authentication rate limit (per source IP address)
 AUTH_RATELIMIT=10/minute;1000/hour 
