--- a/config.env.sample
+++ b/config.env.sample
@@ -4,7 +4,7 @@
 SECRET_KEY=replacesecretkey
 
 # Subnet of the docker network. This should not conflict with any networks to which your system is connected. (Internal and external!)
-SUBNET=172.21.0.0/16
+SUBNET=172.19.0.0/16
 
 # Main mail domain
 DOMAIN=docker.localhost
@@ -27,5 +27,5 @@ WEBSITE=https://mhn.docker.localhost
 # ADMIN
 INITIAL_ADMIN_ACCOUNT=admin
 INITIAL_ADMIN_DOMAIN=mhn.docker.localhost
-INITIAL_ADMIN_PW=admin
-
+INITIAL_ADMIN_PW=secret
+INITIAL_ADMIN_MODE=update
