Make Mailu Subnet Configurable in .env

--- a/config.env.sample
+++ b/config.env.sample
@@ -4,6 +4,7 @@
 SECRET_KEY=replacesecretkey
 
 # Subnet of the docker network. This should not conflict with any networks to which your system is connected. (Internal and external!)
+# Should be the same as in config.env mailu_subnet
 SUBNET=172.19.0.0/16
 
 # Main mail domain
@@ -16,7 +17,7 @@ HOSTNAMES=mhn.docker.localhost,mailu.docker.localhost
 TLS_FLAVOR=mail
 
 # Authentication rate limit (per source IP address)
-AUTH_RATELIMIT=10/minute;1000/hour 
+AUTH_RATELIMIT=10/minute;1000/hour
 
 # Website name
 SITENAME=MHN Mailu
