--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - traefik.http.routers.mailu.tls.certresolver=myresolver
       - traefik.http.routers.mailu.tls.domains[0].main=${DOMAINNAME}
       - traefik.http.routers.mailu.tls.domains[0].sans=mailu.${DOMAINNAME}
-      - traefik.http.routers.mailu.middlewares=secheader
+      - traefik.http.routers.mailu.middlewares=secheader@file
       - traefik.http.services.mailu.loadbalancer.server.port=80
     networks:
       - traefik
