fix and add volumes folder

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # edit and save as .env
 mailu_subnet=172.19.0.0/16
 DOMAINNAME=docker.localhost
-VOLUMES_DIR=./docker/volumes/mailu
+VOLUMES_DIR=./docker/volumes/
 TRAEFIK_ACME_DIR=../traefik/docker/volumes/acme
