--- a/mailu.env.sample
+++ b/mailu.env.sample
@@ -21,7 +21,7 @@ WEBSITE=https://docker.localhost
 # ADMIN
 INITIAL_ADMIN_ACCOUNT=admin
 INITIAL_ADMIN_DOMAIN=docker.localhost
-INITIAL_ADMIN_PW=pw
+INITIAL_ADMIN_PW=secret
 INITIAL_ADMIN_MODE=update
 
 ###################################
