--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - mailu
 
   certdumper:
-    image: mailu/traefik-certdumper:${MAILU_VERSION:-master}
+    image: mailu/traefik-certdumper:master
     restart: unless-stopped
     env_file:
       - mailu.env
@@ -31,7 +31,7 @@ services:
 
   # Core services
   front:
-    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}nginx:${MAILU_VERSION:-1.7}
+    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}nginx:${MAILU_VERSION}
     restart: unless-stopped
     env_file:
       - mailu.env
@@ -63,7 +63,7 @@ services:
       - mailu
 
   admin:
-    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}admin:${MAILU_VERSION:-1.7}
+    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}admin:${MAILU_VERSION}
     restart: unless-stopped
     env_file:
       - mailu.env
@@ -76,7 +76,7 @@ services:
       - mailu
 
   imap:
-    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}dovecot:${MAILU_VERSION:-1.7}
+    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}dovecot:${MAILU_VERSION}
     restart: unless-stopped
     env_file:
       - mailu.env
@@ -89,7 +89,7 @@ services:
       - mailu
 
   smtp:
-    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}postfix:${MAILU_VERSION:-1.7}
+    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}postfix:${MAILU_VERSION}
     restart: unless-stopped
     env_file:
       - mailu.env
@@ -101,7 +101,7 @@ services:
       - mailu
 
   antispam:
-    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}rspamd:${MAILU_VERSION:-1.7}
+    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}rspamd:${MAILU_VERSION}
     restart: unless-stopped
     env_file:
       - mailu.env
@@ -116,7 +116,7 @@ services:
 
   # Optional services
   antivirus:
-    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}clamav:${MAILU_VERSION:-}
+    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}clamav:${MAILU_VERSION}
     restart: always
     env_file: mailu.env
     networks:
@@ -126,7 +126,7 @@ services:
 
   # Webmail
   webmail:
-    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}roundcube:${MAILU_VERSION:-}
+    image: ${DOCKER_ORG:-mailu}/${DOCKER_PREFIX:-}roundcube:${MAILU_VERSION}
     restart: always
     env_file: mailu.env
     networks:
