--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,9 @@
 # edit and save as .env
-MAILU_VERSION=1.7
-mailu_subnet=10.11.0.0/16
+MAILU_VERSION=2.0
+MAILU_SUBNET=10.11.0.0/16
+RESOLVER_IP=10.11.255.254
 DOMAINNAME=docker.localhost
+SERVICENAME=mailu
 VOLUMES_DIR=./docker/volumes
 TRAEFIK_ACME_DIR=../traefik/docker/volumes/acme
+SERVER_IPV4=0.0.0.0
