--- a/mailu.env.sample
+++ b/mailu.env.sample
@@ -3,11 +3,15 @@
 # Set to a randomly generated 16 bytes string
 SECRET_KEY=supersecret16cha
 
+# API token required for authenticating to the RESTful API.
+# This is a mandatory setting for using the RESTful API.
+API_TOKEN=secret-token-key
+
 # Main mail domain
 DOMAIN=docker.localhost
 
 # Hostnames for this server, separated with comas
-HOSTNAMES=docker.localhost,mailu.docker.localhost
+HOSTNAMES=mail.docker.localhost,docker.localhost,mailu.docker.localhost
 
 # Choose how secure connections will behave (value: letsencrypt, cert, notls, mail, mail-letsencrypt)
 TLS_FLAVOR=mail
@@ -35,7 +39,10 @@ SUBNET=10.11.0.0/16
 POSTMASTER=admin
 
 # Authentication rate limit (per source IP address)
-AUTH_RATELIMIT=10/minute;1000/hour
+AUTH_RATELIMIT=10000/minute;10000/hour
+
+# Authentication rate limit per user (regardless of the source-IP)
+AUTH_RATELIMIT_USER=10000/hour
 
 # Opt-out of statistics, replace with "True" to opt out
 DISABLE_STATISTICS=True
@@ -55,6 +62,12 @@ WEBDAV=none
 
 # Antivirus solution (value: clamav, none)
 ANTIVIRUS=clamav
+
+# Expose the API interface (value: true, false)
+API=true
+
+# Scan Macros solution (value: true, false)
+SCAN_MACROS=true
 
 ###################################
 # Mail settings
@@ -82,6 +95,9 @@ RECIPIENT_DELIMITER=+
 DMARC_RUA=admin
 DMARC_RUF=admin
 
+MESSAGE_RATELIMIT=10000/day
+MESSAGE_RATELIMIT_EXEMPTION=moodle@mind-hochschul-netzwerk.de
+
 # Welcome email, enable and set a topic and body if you wish to send welcome
 # emails to all users.
 WELCOME=false
@@ -105,7 +121,10 @@ WEBROOT_REDIRECT=
 WEB_ADMIN=/admin
 
 # Path to the webmail if enabled
-WEB_WEBMAIL=
+WEB_WEBMAIL=/
+
+# Path to the API interface if enabled
+WEB_API=/api
 
 ###################################
 # Advanced settings
@@ -135,6 +154,12 @@ REJECT_UNLISTED_RECIPIENT=
 
 # Log level threshold in start.py (value: CRITICAL, ERROR, WARNING, INFO, DEBUG, NOTSET)
 LOG_LEVEL=WARNING
+
+# Timezone for the Mailu containers. See this link for all possible values https://en.wikipedia.org/wiki>
+TZ=Europe/Berlin
+
+# Default spam threshold used for new users
+DEFAULT_SPAM_THRESHOLD=80
 
 ###################################
 # Database settings
